--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -21,7 +21,7 @@
                           <label for="exampleInputPassword1" class="form-label">Password</label>
                           <input type="password" class="form-control" [(ngModel)]="password"  name="password" id="exampleInputPassword1">
                         </div>
-                        <button type="button" class="btn btn-info" (click)="login()">Login</button>
+                        <button type="button" class="btn btn-info" (keydown.enter)="login()" (click)="login()">Login</button>
                         <div class="row">
                             <div class="col-md-6">
                                     <a style="text-decoration: none;" href="/register">Need an account? <span class="text-danger">Register!</span></a>
