--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,5 +1,4 @@
 <app-header></app-header>
-<app-body>
 <div class="container-fluid">
     <div class="row-mb-5">
         <div class="col"> </div>
@@ -21,7 +20,7 @@
                           <label for="exampleInputPassword1" class="form-label">Password</label>
                           <input type="password" class="form-control" [(ngModel)]="password"  name="password" id="exampleInputPassword1">
                         </div>
-                        <button type="button" class="btn btn-info" (click)="register()">Login</button>
+                        <button type="button" class="btn btn-info" (keyup.enter)="register()" (click)="register()">Register</button>
                         <div class="row">
                             <div class="col-md-6">
                                     <a style="text-decoration: none;" href="/login">Already have an account? <span class="text-danger">Login!</span></a>
@@ -35,4 +34,3 @@
         <div class="col"></div>
     </div>
 </div>
-</app-body>
